--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,72 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Leaderboard | PoolKings</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Leaderboard – PoolKings</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
 <header class="site-header">
-  <div class="logo">👑 POOLKINGS</div>
-  <nav class="main-nav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="pools-list.html">Pools</a>
-    <a href="mypicks.html">My Picks</a>
-    <a href="leaderboard.html" class="active">Leaderboard</a>
-    <a href="rules.html">Official Rules</a>
-    <a href="#" id="signup-btn" class="btn-secondary" style="margin-left:16px;">Sign Up</a>
-  </nav>
+    <div class="header-left">
+        <div class="logo">
+            POOLKIN<span class="crown">👑</span>GS
+        </div>
+    </div>
+
+    <nav class="main-nav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="pools-list.html">Pools</a>
+        <a href="my-picks.html">My Picks</a>
+        <a href="leaderboard.html" class="active">Leaderboard</a>
+        <a href="rules.html">Official Rules</a>
+        <a href="signup.html">Sign Up</a>
+    </nav>
 </header>
 
+<div class="main-content">
 
-<main class="main-content">
-  <section class="section">
-    <h2>Leaderboard</h2>
-    <p>Top performers across all active pools.</p>
+    <h1>Leaderboard</h1>
+    <p>Top performers across all active pools will appear here.</p>
 
-    <div class="ad-slot">
-      Ad placement (leaderboard)
-    </div>
-
-    <table class="leaderboard-table">
-      <thead>
-        <tr>
-          <th>Rank</th>
-          <th>User</th>
-          <th>Score</th>
-        </tr>
-      </thead>
-      <tbody id="leaderboard-body">
-        <!-- Populated by js/leaderboard.js -->
-      </tbody>
-    </table>
-
-    <div class="ad-slot">
-      Ad placement (in-content)
-    </div>
-  </section>
-</main>
-
-<footer class="site-footer">
-  <a href="privacy.html">Privacy</a> ·
-  <a href="terms.html">Terms</a> ·
-  <a href="rules.html">Official Rules</a> ·
-  <a href="advertise.html">Advertise</a>
-</footer>
-
-<div id="signup-modal" class="modal hidden">
-  <div class="modal-content">
-    <h2>Join PoolKings</h2>
-    <p>Enter your email to save picks and join pools.</p>
-    <input type="email" id="signup-email" placeholder="you@example.com">
-    <button id="signup-submit" class="btn-primary" style="margin-top:12px;">Sign Up</button>
-    <p id="signup-status" style="margin-top:8px; font-size:0.85rem;"></p>
-  </div>
 </div>
 
-<script src="js/leaderboard.js"></script>
-<script src="js/main.js"></script>
+<footer class="site-footer">
+    <a href="terms.html">Terms</a> •
+    <a href="privacy.html">Privacy</a> •
+    <a href="rules.html">Official Rules</a>
+    <br />
+    © 2026 PoolKings. All rights reserved.
+</footer>
+
 </body>
 </html>
+
