--- a/pools.html
+++ b/pools.html
@@ -1,52 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PoolKings – Pool</title>
-  <link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pool Details – PoolKings</title>
+
+    <link rel="stylesheet" href="css/style.css" />
+
+    <!-- Your existing JS for rendering a single pool -->
+    <script src="js/pools.js" defer></script>
 </head>
 
 <body>
 
+<!-- HEADER -->
 <header class="site-header">
-  <div class="logo">👑 POOLKINGS</div>
-  <nav class="main-nav">
-    <a href="index.html">Home</a>
-    <a href="pools-list.html" class="active">Pools</a>
-    <a href="mypicks.html">My Picks</a>
-    <a href="leaderboard.html">Leaderboard</a>
-  </nav>
+    <div class="header-left">
+        <div class="logo">
+            POOLKIN<span class="crown">👑</span>GS
+        </div>
+    </div>
+
+    <nav class="main-nav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="pools-list.html" class="active">Pools</a>
+        <a href="mypicks.html">My Picks</a>
+        <a href="leaderboard.html">Leaderboard</a>
+        <a href="rules.html">Official Rules</a>
+        <a href="signup.html">Sign Up</a>
+    </nav>
 </header>
 
-<main class="main-content">
+<!-- MAIN CONTENT -->
+<div class="main-content">
 
-  <!-- Floating Back Button -->
-  <a href="pools-list.html" class="back-to-pools">← Back to Pools</a>
+    <h1 id="pool-title">Loading pool...</h1>
 
-  <!-- Sticky Header -->
-  <div class="pool-header-sticky">
-    <div id="pool-title" class="pool-header-title"></div>
-    <div id="pool-meta" class="pool-header-meta"></div>
-    <div id="pool-countdown" class="pool-countdown"></div>
-  </div>
+    <p id="pool-description"></p>
 
-  <div id="games-slate"></div>
+    <div id="games-container" class="games-container">
+        <!-- JS will populate game pick options here -->
+    </div>
 
-  <div id="submit-status" class="pick-summary-row"></div>
-  <button id="submit-pool-picks" class="sticky-submit">Submit all picks</button>
+    <button id="submit-picks" class="pool-card-button" style="margin-top: 20px;">
+        Submit Picks
+    </button>
 
-</main>
+</div>
 
+<!-- FOOTER -->
 <footer class="site-footer">
-  © 2026 PoolKings. All rights reserved.
+    <a href="terms.html">Terms</a> •
+    <a href="privacy.html">Privacy</a> •
+    <a href="rules.html">Official Rules</a>
+    <br />
+    © 2026 PoolKings. All rights reserved.
 </footer>
-
-<!-- Toast Notification -->
-<div id="toast" class="toast hidden"></div>
-
-<script src="js/pools.js"></script>
-<script src="js/pool-multi.js"></script>
 
 </body>
 </html>
